@@ -1,3 +1,4 @@
 * Updates the Plans to be more descriptive.
 * Fixes an issue where the wrong notification detail may be displayed when navigating between notifications.
+* Fixed an issue where the Stats widget would always revert back to the primary site.
 
